--- a/crates/rs7-parser/Cargo.toml
+++ b/crates/rs7-parser/Cargo.toml
@@ -18,3 +18,8 @@ thiserror.workspace = true
 
 [dev-dependencies]
 proptest.workspace = true
+criterion = "0.5"
+
+[[bench]]
+name = "parser_bench"
+harness = false
