--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,12 +29,14 @@ members = [
     "crates/rs7-validator",
     "crates/rs7-terser",
     "crates/rs7-mllp",
-    "crates/rs7-macros", "crates/rs7-fhir",
+    "crates/rs7-macros",
+    "crates/rs7-fhir",
+    "crates/rs7-wasm",
 ]
 resolver = "2"
 
 [workspace.package]
-version = "0.4.0"
+version = "0.5.0"
 edition = "2024"
 authors = ["Alex Shao <alex.fanshao@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -62,6 +64,9 @@ serde_json = "1.0"
 
 # Date/Time handling
 chrono = "0.4"
+
+# WebAssembly
+wasm-bindgen = "0.2"
 
 # Testing
 proptest = "1.5"
