Added HTTP support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
     "crates/rs7-validator",
     "crates/rs7-terser",
     "crates/rs7-mllp",
+    "crates/rs7-http",
     "crates/rs7-macros",
     "crates/rs7-fhir",
     "crates/rs7-wasm",
@@ -83,6 +84,7 @@ rs7-parser = { path = "crates/rs7-parser" }
 rs7-validator = { path = "crates/rs7-validator" }
 rs7-terser = { path = "crates/rs7-terser" }
 rs7-mllp = { path = "crates/rs7-mllp" }
+rs7-http = { path = "crates/rs7-http" }
 rs7-fhir = { path = "crates/rs7-fhir" }
 rs7-macros = { path = "crates/rs7-macros" }
 
