--- a/crates/rs7-cli/Cargo.toml
+++ b/crates/rs7-cli/Cargo.toml
@@ -12,7 +12,7 @@ categories.workspace = true
 description = "Command-line interface for RS7 HL7 v2.x library"
 
 [[bin]]
-name = "rs7"
+name = "rs7-cli"
 path = "src/main.rs"
 
 [dependencies]
@@ -36,7 +36,7 @@ thiserror.workspace = true
 rs7-fhir = { workspace = true, optional = true }
 
 # Terminal colors
-colored = "2.1"
+colored = "3.0.0"
 
 [features]
 default = []
