RS7 V0.15.0: Message Template System
Added comprehensive template system for creating and validating HL7 v2.x messages from reusable patterns with variable substitution and inheritance.

New Crate: rs7-templates
========================

Template System Features:
- MessageTemplate: Reusable message patterns with metadata
  - Message type and trigger event specification
  - HL7 version string support (e.g., "2.5", "2.5.1")
  - Required and optional segment definitions
  - Variable placeholder support using {{variable}} syntax
  - Description and documentation fields
  - Fluent builder API for programmatic construction

- SegmentTemplate: Individual segment specifications
  - Required/optional segment markers
  - Repeating segment support
  - Field templates at specific positions
  - Description fields

- FieldTemplate: Field-level definitions
  - Required/optional field markers
  - Data type specifications
  - Maximum length constraints
  - Variable placeholders for dynamic values
  - Default value support
  - Component-level templates for composite fields

- ComponentTemplate: Component specifications
  - Position within field
  - Required/optional markers
  - Placeholders and defaults

Template Engine:
- TemplateEngine::new() - Create engine instance
- set_variable(key, value) - Set variable for substitution
- set_variables(map) - Set multiple variables at once
- create_message(template) - Generate message from template
- Automatic variable replacement in placeholders
- Support for template-level default variables
- Engine variables override template defaults
- Proper handling of composite fields and components

Template Validation:
- TemplateValidator::validate() - Validate message against template
- ValidationResult with errors and warnings
  - Valid/invalid status flag
  - List of validation errors with locations
  - List of validation warnings
  - Helper methods: has_errors(), has_warnings()
- ValidationError with message and field location
- ValidationWarning 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rs7-mllp.workspace = true
 chrono.workspace = true
 tokio.workspace = true
 rs7-transform = { workspace = true, features = ["serde"] }
+rs7-templates.workspace = true
 
 [workspace]
 members = [
@@ -30,6 +31,7 @@ members = [
     "crates/rs7-validator",
     "crates/rs7-terser",
     "crates/rs7-transform",
+    "crates/rs7-templates",
     "crates/rs7-mllp",
     "crates/rs7-http",
     "crates/rs7-macros",
@@ -98,6 +100,7 @@ rs7-parser = { version = "0.11.0", path = "crates/rs7-parser" }
 rs7-validator = { version = "0.11.0", path = "crates/rs7-validator" }
 rs7-terser = { version = "0.11.0", path = "crates/rs7-terser" }
 rs7-transform = { version = "0.11.0", path = "crates/rs7-transform" }
+rs7-templates = { version = "0.11.0", path = "crates/rs7-templates" }
 rs7-mllp = { version = "0.11.0", path = "crates/rs7-mllp" }
 rs7-http = { version = "0.11.0", path = "crates/rs7-http" }
 rs7-fhir = { version = "0.11.0", path = "crates/rs7-fhir" }
